# workspace-warp-sync

./: README.md  pyproject.toml  requirements.txt  wkswarp.yaml  wws.py
tests/: test_wws.py
wws/: settings.yaml  wkswarp.yaml  wkswarp.yaml.back  wws.py  wws0.py
wws/commands/: add.py  agent.py  ls.py  rm.py  sync.py  utils.py
